# magic_cube

./: CMakeLists.txt  README.md
code/apis/: ILogModule.h  IRedisModule.h  ITcpPackServerModule.h
code/framework/: AbstractPlugin.cpp  AbstractPlugin.h  CMakeLists.txt  Configer.cpp  Configer.h  GlogInitializer.cpp  GlogInitializer.h  IAction.h  IDCardWrapper.h  IModule.h  IPlugin.h  PluginDefine.h  PluginHelper.h  PluginLoader.cpp  PluginLoader.h  PluginProxy.cpp  PluginProxy.h  Registry.cpp  Registry.h  SharedLibraryLoader.cpp  SharedLibraryLoader.h
code/plugins/actor_plugin/: CMakeLists.txt
code/plugins/network_plugin/: CMakeLists.txt  NetworkPlugin.cpp  TcpPackServerModule.cpp  TcpPackServerModule.h
code/plugins/redis_plugin/: CMakeLists.txt
code/servers/center_server/: Main.cpp
code/servers/chat_server/: CMakeLists.txt
code/servers/log_server/: Main.cpp
config/: MasterServer.xml  PluginManifests.xml
